INSPECTIT-473: Merge to Java 5